--- a/work/ILP_003.html
+++ b/work/ILP_003.html
@@ -130,7 +130,7 @@
                 </colgroup>
                 <tbody>
                     <tr>
-                        <th class="txt-l">사업 신청 지역</th>
+                        <th class="txt-l">사업 신청 유형</th>
                         <td>
                             <div class="radio-wrap">
                                 <div class="radio-box">
