--- a/work/ILP_023.html
+++ b/work/ILP_023.html
@@ -29,7 +29,7 @@
                         <button class="btns bg-blue">검색</button>
                     </div>
                     <div class="com-view-table">
-                        <table summary="">
+                        <table class="hasHover hasClick" summary="">
                             <caption></caption>
                             <colgroup>
                                 <col>
@@ -52,6 +52,30 @@
                                     <td>서울특별시 은평구 화정동 12</td>
                                     <td>홍길동</td>
                                 </tr> 
+                                <tr>
+                                    <td>123-12-12345</td>
+                                    <td>서울과학대학교부설평생교육원</td>
+                                    <td>서울특별시 은평구 화정동 12</td>
+                                    <td>홍길동</td>
+                                </tr>
+                                <tr>
+                                    <td>123-12-12345</td>
+                                    <td>서울과학대학교부설평생교육원</td>
+                                    <td>서울특별시 은평구 화정동 12</td>
+                                    <td>홍길동</td>
+                                </tr>
+                                <tr>
+                                    <td>123-12-12345</td>
+                                    <td>서울과학대학교부설평생교육원</td>
+                                    <td>서울특별시 은평구 화정동 12</td>
+                                    <td>홍길동</td>
+                                </tr>
+                                <tr>
+                                    <td>123-12-12345</td>
+                                    <td>서울과학대학교부설평생교육원</td>
+                                    <td>서울특별시 은평구 화정동 12</td>
+                                    <td>홍길동</td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
