--- a/work/LAP_002.html
+++ b/work/LAP_002.html
@@ -117,7 +117,7 @@
                 <tbody>
                     <tr>
                         <th class="txt-l">
-                            <label for="a">추가 기관명</label>
+                            <label for="a">신청자 이름</label>
                         </th>
                         <td>
                             <input type="text" id="a" class="fixed-value" readonly>
