--- a/work/LAP_003.html
+++ b/work/LAP_003.html
@@ -104,6 +104,7 @@
         <hr>
         <div class="top-info-group">
             <h3>신청정보</h3>
+            <small><em class="color-red">*</em>는 필수사항입니다.</small>
         </div>
         <div class="com-write-table">
             <table class="basic-info">
@@ -118,7 +119,7 @@
                             <label for="a">이름(국문)</label>
                         </th>
                         <td>
-                            <input type="text" id="a" class="fixed-value" readonly>
+                            홍길동
                         </td>
                     </tr>
                     <tr>
@@ -127,9 +128,9 @@
                         </th>
                         <td>
                             <div class="flex-ac gap-10 fixed-value">
-                                <input type="number" id="b" maxlength="6" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" readonly>
+                                001218
                                 -
-                                <input type="password" id="c" maxlength="7" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" readonly>
+                                4******
                             </div>
                         </td>
                     </tr>
@@ -138,7 +139,7 @@
                             <label for="d">대상 유형</label>
                         </th>
                         <td>
-                            <input type="text" id="d" class="fixed-value" readonly>
+                            무관
                         </td>
                     </tr>
                     <tr>
@@ -185,7 +186,7 @@
                                 </div>
                                 <div class="chk-box">
                                     <input type="checkbox" id="chk01">
-                                    <label for="chk01">문자 서비스 수신동의</label>
+                                    <label for="chk01">전자우편 수신동의</label>
                                 </div>                               
                             </div>                         
                         </td>                                    
