--- a/work/LAP_004.html
+++ b/work/LAP_004.html
@@ -105,7 +105,7 @@
                 <p class="page-header-desc">우수이용자들을 위한 평생교육이용권 추가 신청 화면입니다.</p>
             </div>
             <div class="complete-wrap">
-                <strong><span class="color-primary">홍길동</span> 님의 차수 추가 신청이 완료되었습니다.</strong>
+                <strong><span class="color-primary">홍길동</span> 님의 우수이용자 추가 신청이 완료되었습니다.</strong>
             </div>
 
             <div class="btns-bottom">
