--- a/work/LNP_202.html
+++ b/work/LNP_202.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,27 +9,26 @@
     <link rel="stylesheet" href="../css/biz2/layout.css">
     <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
-    <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="../css/biz2/mo.css">
+    <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
     <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
-    <title>울산광역시 평생교육이용권</title>
+    <title>울산광역시 평생교육이용원</title>
 </head>
-
 <body>
     <header>
-        <div class="logo-area multi-logo-area">
-            <a href="LMP_001.html"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
-            <a href="LMP_001.html"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
-            <!-- 임시 구분용 텍스트 -->
-            <span style="margin-left: 20px;">지자체 홈페이지</span>
+        <div class="logo-area">
+            <a href="IMP_002.html">
+                <img src="../images/biz2/header_logo_2.png" alt="울산광역시">
+            </a>
         </div>
         <div class="menu-area">
             <!-- 로그인 시 -->
-            <!-- <a href="#" class="log-info">
+            <a href="#" class="log-info">
                 <img src="../images/biz2/ico/ico_loguser.svg" alt="로그인 유저 아이콘, 로그아웃 아이콘">
                 <span class="log-info-txt">로그아웃</span>
-            </a> -->
+            </a>
             <button class="open-btn">
                 <span class="blind">메뉴 열기</span>
             </button>
@@ -39,48 +37,30 @@
                     <li>
                         <span class="tit">사업안내</span>
                         <div class="link-item">
-                            <a href="LGP_001.html">평생교육이용권이란?</a>
-                            <a href="LGP_001.html">평생교육이용권 사용하기</a>
+                            <a href="IGP_001.html">평생교육이용권이란?</a>
+                            <a href="IGP_001.html">평생교육이용권 사용하기</a>
                         </div>
                     </li>
                     <li>
-                        <span class="tit">사용안내</span>
+                        <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
-                            <a href="LUP_001.html">사용처 안내</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">평생교육이용권</span>
-                        <div class="link-item">
-                            <a href="LAP_100.html">평생교육이용권 신청</a>
-                            <a class="hidden" href="#">이의제기 신청</a>
-                            <a href="#">선정 포기 신청</a>
-                            <a href="LAP_400.html">수기 공모 신청</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">우수이용자 신청</span>
-                        <div class="link-item">
-                            <a href="LAP_001.html">우수이용자 신청</a>
+                            <a href="ILP_001.html">사용기관 신청</a>
+                            <a href="IIP_800.html">사용기관 신청 현황</a>
+                            <a class="hidden" href="#">이용권 사용내역</a>
+                            <a href="#">교육결과 관리</a>
+                            <a class="hidden" href="#">교육과정 정보</a>
+                            <a class="hidden" href="#">학습자 정보</a>
+                            <a href="IIP_400.html">기관 정보 수정</a>
+                            <a class="hidden" href="#">사용기관 연수</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">게시판</span>
                         <div class="link-item">
-                            <a href="LNP_001.html">공지사항</a>
-                            <a href="LNP_100.html">자료실</a>
-                            <a href="LNP_200.html">자주하는질문</a>
-                            <a href="LNP_200.html">질의응답</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">마이페이지</span>
-                        <div class="link-item">
-                            <a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_100.html">평생교육이용권 신청내역</a>
-                            <a href="#">평생교육이용권 이용내역</a>
-                            <a href="#">교육이수정보</a>
-                            <a class="hidden" href="#">이용자 이벤트</a>
+                            <a href="IIP_001.html">공지사항</a>
+                            <a href="INP_100.html">자료실</a>
+                            <a href="INP_200.html">자주하는질문</a>
+                            <a href="INP_200.html">질의응답</a>
                         </div>
                     </li>
                 </ul>
@@ -95,8 +75,8 @@
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
                 <span class="arrow">게시판</span>
-                <span class="arrow">자주하는질문</span>
-                <span class="arrow">자주하는질문 상세</span>
+                <span class="arrow">자료실</span>
+                <span class="arrow">자료실 상세</span>
             </div>
         </div>
     </div>
@@ -114,7 +94,7 @@
                     <caption>자주하는 질문 상세</caption>
                     <thead>
                         <tr>
-                            <th>크롬(Chrome)브라우저를 통한 평생교육이용권 신청 시 인증실패 조치방법</th>
+                            <th>크롬(Chrome)브라우저를 통한 평생교육이용권 신청 시 인증실패 조치방법크롬(Chrome)브라우저를 통한 평생교육이용권 신청 시 인증실패 조치방법크롬(Chrome)브라우저를 통한 평생교육이용권 신청 시 인증실패 조치방법크롬(Chrome)브라우저를 통한 평생교육이용권 신청 시 인증실패 조치방법크롬(Chrome)브라우저를 통한 평생교육이용권 신청 시 인증실패 조치방법</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -137,20 +117,20 @@
                             </td>
                         </tr>
                         <tr>
-                            <!-- <span class="qna-attached">첨부파일</span>
-                            <div class="attached-file">
-                                <img src="../images/biz2/ico/ico_pdf.svg" alt="PDF이미지" class="ico-pdf">
-                                시스템 공지 안내문 
-                            </div>   
-                            <button type="button" class="btns btn-download">다운로드</button>    -->
-                            <td>
+                            <td class="qna-attach">
+                                <!-- <span class="qna-attached">첨부파일</span>
+                                <div class="attached-file">
+                                    <img src="../images/biz2/ico/ico_pdf.svg" alt="PDF이미지" class="ico-pdf">
+                                    시스템 공지 안내문 
+                                </div>   
+                                <button type="button" class="btns btn-download">다운로드</button>    -->
                                 <span class="qna-attached">첨부파일</span>
                                 <div class="add-file">
                                     <div class="attached-file">
                                         <img src="../images/biz2/ico/ico_pdf.svg" alt="PDF이미지" class="ico-pdf">
                                         인터넷접속기록삭제방법.hwp [110288 byte]
                                     </div>   
-                                    <button type="button" class="btns btn-download">다운로드</button>
+                                    <button type="button" class="btns btn-download"><span>다운로드</span></button>
                                 </div>
                             </td>
                         </tr>
@@ -193,5 +173,4 @@
         </div>
     </footer>
 </body>
-
 </html>
