--- a/work/LUP_001.html
+++ b/work/LUP_001.html
@@ -215,7 +215,7 @@
                     <option value="3">30건 보기</option>
                 </select>
             </div>
-            <div class="com-view-table">
+            <div class="com-view-table lg-only">
                 <table>
                     <caption>사용처 안내 테이블</caption>
                     <colgroup>                      
@@ -238,7 +238,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="txt-l">(주)중앙자동차운전전문학원 <button type="button" class="btn-bd new">NEW</button></td>
+                            <td class="txt-l">(주)중앙자동차운전전문학원 <span class="new">NEW</span></td>
                             <td class="txt-l">인천광역시 서구</td>
                             <td>오프라인</td>
                             <td>&nbsp;</td>
@@ -263,6 +263,43 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+            <div class="table-list sm-show-800">
+                <ul>
+                    <li>
+                        <strong>(주)중앙자동차운전전문학원</strong> 
+                        <img src="../images/biz2/ico/ico_map.svg" alt="지도">
+                        <span class="new">NEW</span>
+                    </li>
+                    <li><strong>주소 :</strong> 인천광역시 서구</li>
+                    <li><strong>기관구분 :</strong> 오프라인</li>
+                    <li><strong>홈페이지 주소 :</strong> www.test.co.kr</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>노원발달장애인평생교육센터</strong> 
+                    </li>
+                    <li><strong>주소 :</strong> 서울특별시 노원구</li>
+                    <li><strong>기관구분 :</strong> 오프라인</li>
+                    <li><strong>홈페이지 주소 :</strong> www.test.co.kr</li>
+                    <li>
+                        <strong>기관 연계사업 유형 :</strong> 
+                        <img src="../images/biz2/ico/ico_organ02.svg" alt="기관 연계사업 유형">
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>(주)중앙자동차운전전문학원</strong> 
+                        <img src="../images/biz2/ico/ico_map.svg" alt="지도">
+                    </li>
+                    <li><strong>주소 :</strong> 인천광역시 서구</li>
+                    <li><strong>기관구분 :</strong> 오프라인</li>
+                    <li><strong>홈페이지 주소 :</strong> www.test.co.kr</li>
+                    <li>
+                        <strong>기관 연계사업 유형 :</strong> 
+                        <img src="../images/biz2/ico/ico_organ02.svg" alt="기관 연계사업 유형">
+                    </li>
+                </ul>
             </div>
             <div class="com-paging">
                 <button class="prev">이전</button>
