--- a/work/index.html
+++ b/work/index.html
@@ -612,13 +612,13 @@
           <td class="ac">O</td>
           <td>12.21 : 1차 퍼블리싱</td>
         </tr>
-        <tr class="line l">
+        <tr class="line done l">
           <th>평생교육이용권</th>
           <td>이용권 지자체_사용처 상세</td>
           <td>page</td>
           <td><a href="./LUP_003.html">LUP_003.html</a></td>
-          <td class="ac"></td>
-          <td></td>
+          <td class="ac">O</td>
+          <td>12.26 : 1차 퍼블리싱</td>
         </tr>
         <tr class="line done l">
           <th>평생교육이용권</th>
@@ -710,6 +710,30 @@
           <td><a href="./LAP_105.html">LAP_105.html</a></td>
           <td class="ac">O</td>
           <td>12.19:1차 퍼블리싱</td>
+        </tr>
+        <tr class="line done l">
+          <th>평생교육이용권</th>
+          <td>이용권 지자체_이의제기 신청</td>
+          <td>page</td>
+          <td><a href="./LAP_200.html">LAP_200.html</a></td>
+          <td class="ac">O</td>
+          <td>12.30:1차 퍼블리싱</td>
+        </tr>
+        <tr class="line done l">
+          <th>평생교육이용권</th>
+          <td>이용권 지자체_이의제기 신청 등록</td>
+          <td>page</td>
+          <td><a href="./LAP_201.html">LAP_201.html</a></td>
+          <td class="ac">O</td>
+          <td>12.30:1차 퍼블리싱</td>
+        </tr>
+        <tr class="line done l">
+          <th>평생교육이용권</th>
+          <td>이용권 지자체_선정포기신청</td>
+          <td>page</td>
+          <td><a href="./LAP_300.html">LAP_300.html</a></td>
+          <td class="ac">O</td>
+          <td>12.30:1차 퍼블리싱</td>
         </tr>
         <tr class="line done l">
           <th>평생교육이용권</th>
