--- a/work/IIP_205.html
+++ b/work/IIP_205.html
@@ -112,7 +112,7 @@
                             <td colspan="3">
                                 <div class="input-wrap">
                                     <input type="text" id="a" placeholder="평생교육강좌">
-                                    <button type="button" class="btns layer-btn" onclick="$('[data-pop=pop-0]').show();">학점은행제 평가인정 강좌 조회</button>
+                                    <button type="button" class="btns layer-btn" onclick="$('[data-pop=often-course]').show();">학점은행제 평가인정 강좌 조회</button>
                                 </div>
                             </td>
                         </tr>
@@ -157,7 +157,7 @@
                                     <option value="1">3</option>
                                     <option value="1">4</option>
                                 </select>
-                                <button type="button" class="btns layer-btn" onclick="$('[data-pop=pop-2]').show();">상세보기</button>
+                                <button type="button" class="btns layer-btn" onclick="$('[data-pop=six-category]').show();">상세보기</button>
                             </td>
                             <th class="txt-l">자주쓰는 강좌</th>
                             <td>
@@ -235,6 +235,14 @@
                             </th>
                             <td>
                                 <input type="text" id="f">
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">
+                                <label for="ee" class="must-type">정원</label>
+                            </th>
+                            <td colspan="3">
+                                <input type="text" id="ee">
                             </td>
                         </tr>
                         <tr>
@@ -332,7 +340,7 @@
                             <th>출석일수/시간/차수</th>
                             <th>이수여부</th>
                             <th>
-                                <button type="button" class="layer-btn btns bg-blue" onclick="$('[data-pop=pop-1]').show();">추가</button>
+                                <button type="button" class="layer-btn btns bg-blue" onclick="$('[data-pop=learn-info]').show();">추가</button>
                             </th>
                         </tr>
                     </thead>
@@ -401,86 +409,174 @@
             </div>
         </div>
     </footer>
-    <div class="layer-pop" data-pop="pop-1">
-        <div class="layer-content" style="--max-width: 840px">
+    <div class="layer-pop" data-pop="learn-info">
+        <div class="layer-content" style="--max-width: 1200px">
             <div class="layer-scroll">
-                <span class="title">학점은행제 강좌 조회</span>
+                <span class="title">학습자 정보 추가</span>
                 <div class="info-area">
-                    <div class="search-box list">
-                        <div class="flex-ac">
-                            <label for="1">강좌명</label>
-                            <input type="text" id="1">
+                    <div class="search-box">
+                        <label for="1">승인번호</label>
+                        <input type="text" id="1">
+                        <label for="2">승인일자</label>
+                        <input type="text" id="2" placeholder="생년월일 8자리">
+                        <label for="3">성명</label>
+                        <input type="text" id="3">
+                        <button class="btns">검색</button>
+                    </div>
+                    <div class="table-box ">
+                        <div class="top-info-group">
+                            <p class="top-info-group-data">
+                                총  <strong>1</strong>건
+                            </p>
+                            <small><em class="color-red">*</em> 부분취소 결제건을 등록하는 경우 환불여부를 [예]로 선택해 주세요.</small>
                         </div>
-                        <div class="flex-ac">
-                            <label for="2">강좌시작일</label>
-                            <input type="text" id="2">
-                            <label for="3">분반</label>
-                            <input type="text" id="3">
-                            <button class="btns">검색</button>
+                        <div class="com-view-table">
+                            <table class="mg-0">
+                                <colgroup>
+                                    <col style="width: 206px;">
+                                    <col style="width: 90px;">
+                                    <col style="width: 220px;">
+                                    <col style="width: 100px;">
+                                    <col>
+                                    <col style="width: 100px;">
+                                    <col style="width: 100px;">
+                                    <col style="width: 100px;">
+                                </colgroup>
+                                <thead>
+                                    <tr>
+                                        <th>환불여부</th>
+                                        <th>구분</th>
+                                        <th>카드번호</th>
+                                        <th>승인금액</th>
+                                        <th>승인일시</th>
+                                        <th>성명</th>
+                                        <th>생년월일</th>
+                                        <th>등록</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <select class="ui-select">
+                                                <option value="y">예</option>
+                                                <option value="n">아니오</option>
+                                            </select>
+                                        </td>
+                                        <td>승인</td>
+                                        <td>1111-****-****-1212</td>
+                                        <td>85,000</td>
+                                        <td>2024.09.12 14:12:22</td>
+                                        <td>홍길동</td>
+                                        <td>99.12.12</td>
+                                        <td><button class="btns bg-blue">등록</button></td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
-                    <div class="top-info-group">
-                        <p class="top-info-group-data">총 <strong>4</strong>건</p>
+                    <div class="com-paging">
+                        <button class="prev">이전</button>
+                        <button class="on">1</button>
+                        <button>2</button>
+                        <button>3</button>
+                        <button>4</button>
+                        <button>5</button>
+                        <span class="empty">...</span>
+                        <button>120</button>
+                        <button class="next">다음</button>
                     </div>
-                    <div class="com-view-table">
-                        <table class="mg-0">
-                            <caption>
-                                학점은행제 강좌 조회 테이블
-                            </caption>
-                            <colgroup>
-                                <col>
-                                <col>
-                                <col>
-                                <col>
-                                <col>
-                            </colgroup>
-                            <thead>
-                                <tr>
-                                    <th>강좌명</th>
-                                    <th>분반</th>
-                                    <th>교육시작일자</th>
-                                    <th>교육종로일자</th>
-                                    <th>강사명</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>평생교육강좌</td>
-                                    <td>1</td>
-                                    <td>2022.12.12</td>
-                                    <td>2022.12.21</td>
-                                    <td>홍길동</td>
-                                </tr>
-                                <tr>
-                                    <td>평생교육강좌</td>
-                                    <td>1</td>
-                                    <td>2022.12.12</td>
-                                    <td>2022.12.21</td>
-                                    <td>홍길동</td>
-                                </tr>
-                                <tr>
-                                    <td>평생교육강좌</td>
-                                    <td>1</td>
-                                    <td>2022.12.12</td>
-                                    <td>2022.12.21</td>
-                                    <td>홍길동</td>
-                                </tr>
-                                <tr>
-                                    <td>평생교육강좌</td>
-                                    <td>1</td>
-                                    <td>2022.12.12</td>
-                                    <td>2022.12.21</td>
-                                    <td>홍길동</td>
-                                </tr>
-                                <tr>
-                                    <td>평생교육강좌</td>
-                                    <td>1</td>
-                                    <td>2022.12.12</td>
-                                    <td>2022.12.21</td>
-                                    <td>홍길동</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    <ul class="layer-text-list">
+                        <li class="layer-text-tit color-red">※ 학습자 정보 추가 전 유의사항</li>
+                        <li class="layer-text-desc">- <em class="color-blue">이용권 카드 본인사용 확인</em>(카드결제 정보내 이름과 실제 수강자명 일치여부 확인</li>
+                        <li class="layer-text-desc">- 평생교육강좌 수강료 및 이에 해당하는 교재 외 결제, 등록불가(교재 단독 결제 불가)</li>
+                        <li class="layer-text-desc" >평생교육이용권 본인외 사용 및 목적외 사용 확인시 이용자 안내 후 카드 취소 처리 요청</li>
+                    </ul>
+                </div>
+                <button class="close-btn" onclick="$('[data-pop=learn-info]').hide();">
+                    <span class="blind">
+                    레이어 팝업 닫기
+                    </span>
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="layer-pop" data-pop="often-course">
+        <div class="layer-content" style="--max-width: 1200px">
+            <div class="layer-scroll">
+                <span class="title">자주쓰는 강좌</span>
+                <div class="info-area">
+                    <div class="table-box">
+                        <div class="com-write-table">
+                            <table>
+                                <caption>자주쓰는 강좌 안내 테이블</caption>
+                                <colgroup>
+                                    <col style="width: 150px;">
+                                    <col>
+                                </colgroup>
+                                <tbody>
+                                    <tr>
+                                        <th>구분</th>
+                                        <td>
+                                            <div class="radio-box">
+                                                <input type="radio" id="chk-ex" name="confirmation" value="yes">
+                                                <label for="chk-ex">자주쓰는 강좌</label>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="com-view-table">
+                            <table>
+                                <colgroup>
+                                    <col>
+                                    <col>
+                                    <col>
+                                    <col>
+                                    <col>
+                                    <col>
+                                    <col>
+                                </colgroup>
+                                <thead>
+                                    <tr>
+                                        <th>강좌명</th>
+                                        <th>강좌분류</th>
+                                        <th>교육방법</th>
+                                        <th>
+                                            총교육일수
+                                            <br>
+                                            (총 교육시간)
+                                        </th>
+                                        <th>
+                                            교육시간<br>
+                                            (회당)
+                                        </th>
+                                        <th>수강료</th>
+                                        <th>교재비</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>유럽바리스타 자격증</td>
+                                        <td>시민참여교육</td>
+                                        <td>온라인</td>
+                                        <td>11일</td>
+                                        <td>2</td>
+                                        <td>100,000원</td>
+                                        <td>50,000원</td>
+                                    </tr>
+                                    <tr>
+                                        <td>유럽바리스타 자격증</td>
+                                        <td>시민참여교육</td>
+                                        <td>온라인</td>
+                                        <td>11일</td>
+                                        <td>2</td>
+                                        <td>100,000원</td>
+                                        <td>50,000원</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                     <div class="com-paging">
                         <button class="prev">이전</button>
@@ -494,13 +590,13 @@
                         <button class="next">다음</button>
                     </div>
                     <div class="layer-btn-wrap">
-                        <button class="btns" onclick="$('[data-pop=pop-1]').hide();">닫기</button>
+                        <button class="btns" onclick="$('[data-pop=often-course]').hide();">닫기</button>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="layer-pop" data-pop="pop-2">
+    </div> 
+    <div class="layer-pop" data-pop="six-category">
         <div class="layer-content" style="--max-width: 1200px">
             <div class="layer-scroll">
                 <span class="title">평생교육프로그램 6대 영역별 분류</span>
@@ -544,7 +640,7 @@
                         </div>
                     </div>
                     <div class="layer-btn-wrap">
-                        <button class="btns" onclick="$('[data-pop=pop-2]').hide();">닫기</button>
+                        <button class="btns" onclick="$('[data-pop=six-category]').hide();">닫기</button>
                     </div>
                 </div>
             </div>
