--- a/work/LNP_001.html
+++ b/work/LNP_001.html
@@ -2,33 +2,33 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css js inject -->
     <link rel="stylesheet" href="../css/biz2/reset.css">
     <link rel="stylesheet" href="../css/biz2/common.css">
     <link rel="stylesheet" href="../css/biz2/layout.css">
     <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
+    <link rel="stylesheet" href="../css/biz2/mo.css">
     <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
     <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
-    <title>울산광역시 평생교육이용권</title>
+    <title>울산광역시 평생교육이용원</title>
 </head>
 <body>
     <header>
-        <div class="logo-area multi-logo-area">
-            <a href="LMP_001.html"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
-            <a href="LMP_001.html"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
-            <!-- 임시 구분용 텍스트 -->
-            <span style="margin-left: 20px;">지자체 홈페이지</span>
+        <div class="logo-area">
+            <a href="IMP_002.html">
+                <img src="../images/biz2/header_logo_2.png" alt="울산광역시">
+            </a>
         </div>
         <div class="menu-area">
             <!-- 로그인 시 -->
-            <!-- <a href="#" class="log-info">
+            <a href="#" class="log-info">
                 <img src="../images/biz2/ico/ico_loguser.svg" alt="로그인 유저 아이콘, 로그아웃 아이콘">
                 <span class="log-info-txt">로그아웃</span>
-            </a> -->
+            </a>
             <button class="open-btn">
                 <span class="blind">메뉴 열기</span>
             </button>
@@ -37,48 +37,30 @@
                     <li>
                         <span class="tit">사업안내</span>
                         <div class="link-item">
-                            <a href="LGP_001.html">평생교육이용권이란?</a>
-                            <a href="LGP_001.html">평생교육이용권 사용하기</a>
+                            <a href="IGP_001.html">평생교육이용권이란?</a>
+                            <a href="IGP_001.html">평생교육이용권 사용하기</a>
                         </div>
                     </li>
                     <li>
-                        <span class="tit">사용안내</span>
+                        <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
-                            <a href="LUP_001.html">사용처 안내</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">평생교육이용권</span>
-                        <div class="link-item">
-                            <a href="LAP_100.html">평생교육이용권 신청</a>
-                            <a class="hidden" href="#">이의제기 신청</a>
-                            <a href="#">선정 포기 신청</a>
-                            <a href="LAP_400.html">수기 공모 신청</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">우수이용자 신청</span>
-                        <div class="link-item">
-                            <a href="LAP_001.html">우수이용자 신청</a>
+                            <a href="ILP_001.html">사용기관 신청</a>
+                            <a href="IIP_800.html">사용기관 신청 현황</a>
+                            <a class="hidden" href="#">이용권 사용내역</a>
+                            <a href="#">교육결과 관리</a>
+                            <a class="hidden" href="#">교육과정 정보</a>
+                            <a class="hidden" href="#">학습자 정보</a>
+                            <a href="IIP_400.html">기관 정보 수정</a>
+                            <a class="hidden" href="#">사용기관 연수</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">게시판</span>
                         <div class="link-item">
-                            <a href="LNP_001.html">공지사항</a>
-                            <a href="LNP_100.html">자료실</a>
-                            <a href="LNP_200.html">자주하는질문</a>
-                            <a href="LNP_200.html">질의응답</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">마이페이지</span>
-                        <div class="link-item">
-                            <a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_100.html">평생교육이용권 신청내역</a>
-                            <a href="#">평생교육이용권 이용내역</a>
-                            <a href="#">교육이수정보</a>
-                            <a class="hidden" href="#">이용자 이벤트</a>
+                            <a href="IIP_001.html">공지사항</a>
+                            <a href="INP_100.html">자료실</a>
+                            <a href="INP_200.html">자주하는질문</a>
+                            <a href="INP_200.html">질의응답</a>
                         </div>
                     </li>
                 </ul>
@@ -101,7 +83,7 @@
         <div class="page-header">
             <h2 class="page-header-tit">공지사항</h2>
         </div>        
-        <div class="contents">
+        <div class="contents cs-center">
             <div class="search-area">
                 <div class="flex-ac">
                     <label for="select-box" class="blind">검색조건 선택</label>
@@ -118,15 +100,15 @@
                 </div>
             </div>
             <div class="top-info-group">
-                <p class="top-info-group-data">총 <strong>6,234</strong>건</p>
-                <label for="select-view" class="blind">노출 조건 선택</label>
+                <p class="top-info-group-data">총 <strong>3,101</strong>건</p>
+                <label for="select-view" class="blind">노출 건수 선택</label>
                 <select id="select-view">
                     <option value="1">10건 보기</option>
                     <option value="2">20건 보기</option>
                     <option value="3">30건 보기</option>
                 </select>
             </div>
-            <div class="com-view-table">
+            <div class="com-view-table lg-only">
                 <table>
                     <caption>공지사항 안내 테이블</caption>
                     <colgroup>
@@ -196,6 +178,68 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+            <div class="table-list sm-show-800">
+                <ul>
+                    <li>
+                        <strong>[시스템공지] 지자체 평생교육이용권 시스템 일시중단 안내(9.27~9.28)</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고</strong> 
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 신청 접수 공고</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 선정자 알림 및 사용 안내</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>[시스템공지] 지자체 평생교육이용권 시스템 일시중단 안내(9.27~9.28)</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고</strong> 
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 신청 접수 공고</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 선정자 알림 및 사용 안내</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
             </div>
             <div class="com-paging">
                 <button class="prev">이전</button>
