--- a/work/LNP_100.html
+++ b/work/LNP_100.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,27 +9,26 @@
     <link rel="stylesheet" href="../css/biz2/layout.css">
     <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
-    <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="../css/biz2/mo.css">
+    <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
     <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
-    <title>울산광역시 평생교육이용권</title>
+    <title>울산광역시 평생교육이용원</title>
 </head>
-
 <body>
     <header>
-        <div class="logo-area multi-logo-area">
-            <a href="LMP_001.html"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
-            <a href="LMP_001.html"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
-            <!-- 임시 구분용 텍스트 -->
-            <span style="margin-left: 20px;">지자체 홈페이지</span>
+        <div class="logo-area">
+            <a href="IMP_002.html">
+                <img src="../images/biz2/header_logo_2.png" alt="울산광역시">
+            </a>
         </div>
         <div class="menu-area">
             <!-- 로그인 시 -->
-            <!-- <a href="#" class="log-info">
+            <a href="#" class="log-info">
                 <img src="../images/biz2/ico/ico_loguser.svg" alt="로그인 유저 아이콘, 로그아웃 아이콘">
                 <span class="log-info-txt">로그아웃</span>
-            </a> -->
+            </a>
             <button class="open-btn">
                 <span class="blind">메뉴 열기</span>
             </button>
@@ -39,48 +37,30 @@
                     <li>
                         <span class="tit">사업안내</span>
                         <div class="link-item">
-                            <a href="LGP_001.html">평생교육이용권이란?</a>
-                            <a href="LGP_001.html">평생교육이용권 사용하기</a>
+                            <a href="IGP_001.html">평생교육이용권이란?</a>
+                            <a href="IGP_001.html">평생교육이용권 사용하기</a>
                         </div>
                     </li>
                     <li>
-                        <span class="tit">사용안내</span>
+                        <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
-                            <a href="LUP_001.html">사용처 안내</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">평생교육이용권</span>
-                        <div class="link-item">
-                            <a href="LAP_100.html">평생교육이용권 신청</a>
-                            <a class="hidden" href="#">이의제기 신청</a>
-                            <a href="#">선정 포기 신청</a>
-                            <a href="LAP_400.html">수기 공모 신청</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">우수이용자 신청</span>
-                        <div class="link-item">
-                            <a href="LAP_001.html">우수이용자 신청</a>
+                            <a href="ILP_001.html">사용기관 신청</a>
+                            <a href="IIP_800.html">사용기관 신청 현황</a>
+                            <a class="hidden" href="#">이용권 사용내역</a>
+                            <a href="#">교육결과 관리</a>
+                            <a class="hidden" href="#">교육과정 정보</a>
+                            <a class="hidden" href="#">학습자 정보</a>
+                            <a href="IIP_400.html">기관 정보 수정</a>
+                            <a class="hidden" href="#">사용기관 연수</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">게시판</span>
                         <div class="link-item">
-                            <a href="LNP_001.html">공지사항</a>
-                            <a href="LNP_100.html">자료실</a>
-                            <a href="LNP_200.html">자주하는질문</a>
-                            <a href="LNP_200.html">질의응답</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">마이페이지</span>
-                        <div class="link-item">
-                            <a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_100.html">평생교육이용권 신청내역</a>
-                            <a href="#">평생교육이용권 이용내역</a>
-                            <a href="#">교육이수정보</a>
-                            <a class="hidden" href="#">이용자 이벤트</a>
+                            <a href="IIP_001.html">공지사항</a>
+                            <a href="INP_100.html">자료실</a>
+                            <a href="INP_200.html">자주하는질문</a>
+                            <a href="INP_200.html">질의응답</a>
                         </div>
                     </li>
                 </ul>
@@ -102,18 +82,18 @@
     <div class="container wrap">
         <div class="page-header">
             <h2 class="page-header-tit">자료실</h2>
-        </div>
-        <div class="contents">
+        </div>        
+        <div class="contents cs-center">
             <div class="search-area">
                 <div class="flex-ac">
                     <label for="select-box" class="blind">검색조건 선택</label>
                     <select id="select-box" class="ui-select">
+                        <option value="1">전체</option>
                         <option value="1">제목</option>
                         <option value="1">내용</option>
-                        <option value="1">작성자</option>
                     </select>
                     <div class="search-input">
-                        <label for="search-bar" class="blind"> 자료실 검색어 입력</label>
+                        <label for="search-bar" class="blind"> 공지사항 검색어 입력</label>
                         <input type="text" id="search-bar">
                         <button type="button" class="btn-search">검색</button>
                     </div>
@@ -121,14 +101,14 @@
             </div>
             <div class="top-info-group">
                 <p class="top-info-group-data">총 <strong>6,234</strong>건</p>
-                <label for="select-view" class="blind">노출 조건 선택</label>
+                <label for="select-view" class="blind">노출 건수 선택</label>
                 <select id="select-view">
                     <option value="1">10건 보기</option>
                     <option value="2">20건 보기</option>
                     <option value="3">30건 보기</option>
                 </select>
             </div>
-            <div class="com-view-table">
+            <div class="com-view-table lg-only">
                 <table>
                     <caption>공지사항 안내 테이블</caption>
                     <colgroup>
@@ -147,61 +127,119 @@
                         <tr>
                             <td>1</td>
                             <td class="txt-l">
-                                <a href="INP_101.html" class="com-view-title">2024년 평생교육이용권 우수 이용자 재충전 신청 매뉴얼</a>
+                                <a href="#" class="com-view-title">2024년 평생교육이용권 우수 이용자 재충전 신청 매뉴얼</a>
                             </td>
                             <td>2024-10-02</td>
                         </tr>
                         <tr>
                             <td>2</td>
                             <td class="txt-l"><a href="#" class="com-view-title">평생교육이용권 사용기관 업무 매뉴얼</a></td>
-                            <td>2024-09-12</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">평생교육이용권 사용기관 등록 안내서</a></td>
-                            <td>2024-09-10</td>
+                            <td>2024-10-02</td>
                         </tr>
                         <tr>
                             <td>4</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">연도별 평생교육이용권 지원사업 현황</a></td>
-                            <td>2024-08-25</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">평생교육이용권 사용기관 등록 안내서</a></td>
+                            <td>2024-10-02</td>
                         </tr>
                         <tr>
                             <td>5</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">2024년 평생교육이용권 신청 매뉴얼(모바일)</a></td>
-                            <td>2024-08-23</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">연도별 평생교육이용권 지원사업 현황</a></td>
+                            <td>2024-10-02</td>
                         </tr>
                         <tr>
                             <td>6</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">2024년 평생교육이용권 신청 매뉴얼(컴퓨터)</a></td>
-                            <td>2024-08-30</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">2024년 평생교육이용권 신청 매뉴얼(모바일)</a></td>
+                            <td>2024-10-02</td>
                         </tr>
                         <tr>
                             <td>7</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">2023년 평생교육이용권 우수이용자 온라인 신청 매뉴얼</a></td>
-                            <td>2024-07-29</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">2024년 평생교육이용권 신청 매뉴얼(컴퓨터)</a></td>
+                            <td>2024-10-02</td>
                         </tr>
                         <tr>
                             <td>8</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">2022년 평생교육이용권 수기 공모전 수상작 사례집</a></td>
-                            <td>2024-07-10</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">2023년 평생교육이용권 우수이용자 온라인 신청 매뉴얼</a></td>
+                            <td>2024-10-02</td>
                         </tr>
                         <tr>
                             <td>9</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">2023년 평생교육이용권 사용기관 업무 매뉴얼</a></td>
-                            <td>2024-06-12</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">2022년 평생교육이용권 수기 공모전 수상작 사례집</a></td>
+                            <td>2024-10-02</td>
                         </tr>
                         <tr>
                             <td>10</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">2023년 평생교육이용권 신청 매뉴얼(기준중위소득 65% 이하 대상자)</a></td>
-                            <td>2024-05-23</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">2023년 평생교육이용권 사용기관 업무 매뉴얼</a></td>
+                            <td>2024-10-02</td>
                         </tr>
-                        <!-- 조회 데이터 없을 시 -->
-                        <!-- <tr>
-                            <td colspan="3">조회된 데이터가 없습니다.</td>
-                        </tr> -->
+                        <tr>
+                            <td>3</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">2023년 평생교육이용권 신청 매뉴얼(기준중위소득 65% 이하 대상자)</a></td>
+                            <td>2024-10-02</td>
+                        </tr>
                     </tbody>
                 </table>
+            </div>
+            <div class="table-list sm-show-800">
+                <ul>
+                    <li>
+                        <strong>2024년 평생교육이용권 우수 이용자 재충전 신청 매뉴얼</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>평생교육이용권 사용기관 업무 매뉴얼</strong> 
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>평생교육이용권 사용기관 등록 안내서</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>연도별 평생교육이용권 지원사업 현황</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>2024년 평생교육이용권 신청 매뉴얼(모바일)</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>2024년 평생교육이용권 신청 매뉴얼(컴퓨터)</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>2023년 평생교육이용권 우수이용자 온라인 신청 매뉴얼</strong> 
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>2022년 평생교육이용권 수기 공모전 수상작 사례집</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>2023년 평생교육이용권 사용기관 업무 매뉴얼</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
+                <ul>
+                    <li>
+                        <strong>2023년 평생교육이용권 신청 매뉴얼(기준중위소득 65% 이하 대상자)</strong>
+                    </li>
+                    <li><strong>작성일 :</strong> 2024-10-02</li>
+                </ul>
             </div>
             <div class="com-paging">
                 <button class="prev">이전</button>
@@ -247,5 +285,4 @@
         </div>
     </footer>
 </body>
-
 </html>
